# fermat

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  hello.erl  memo.txt  rebar.config  rustfmt.toml
.github/workflows/: periodic.yml  regression.yml  release.yml
src/: avltree.rs  fermat.app.src  fermat.erl  fermat_avltree.erl  fermat_formatter.erl  fermat_layout_expr.erl  fermat_layout_function.erl  fermat_token.erl  formatter.rs  layout_expr.rs  layout_fun.rs  lib.rs  main.rs  node.rs  token.rs  trailing_separator_remover.rs
src/snapshots/: fermat__avltree__from_iter.snap  fermat__avltree__insert.snap  fermat__avltree__left_left_rotation.snap  fermat__avltree__left_right_rotation.snap  fermat__avltree__right_left_rotation.snap  fermat__avltree__right_right_rotation.snap  fermat__layout_fun__apposition.snap  fermat__layout_fun__choice.snap  fermat__layout_fun__from_layout_expr_let_var.snap  fermat__layout_fun__from_layout_expr_record.snap  fermat__layout_fun__layout_fun_tests__apposition.snap  fermat__layout_fun__layout_fun_tests__choice.snap  fermat__layout_fun__layout_fun_tests__from_layout_expr_max_choice_nest_level.snap  fermat__layout_fun__layout_fun_tests__from_layout_expr_nested_choice.snap  fermat__layout_fun__layout_fun_tests__from_layout_expr_record.snap  fermat__layout_fun__layout_fun_tests__height_cost_oneline.snap  fermat__layout_fun__layout_fun_tests__height_cost_two_lines.snap  token__tokenize symbols.snap  (+6 more)
tree-sitter-erlang/: erl_parse.yrl  erl_parse_to_grammer.py  grammar.js
tree-sitter-id/: Cargo.toml  build.rs
(+5 files in other folders)
