[package]
name = "fermat"
version = "0.1.0"
authors = ["Hisayuki Mima <youxkei@gmail.com>"]
edition = "2018"

[dependencies]
tree-sitter = "0.17"
itertools = "0.10.0"
tree-sitter-id = { path = "tree-sitter-id" }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
insta = "0.16"
indoc = "1.0"
pretty_assertions = "0.6"

[workspace]
members = [
    "tree-sitter-id"
]
